--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,7 @@
    */
   img {
     border-style: none;
+    width: 100%;
   }
   
   /* Forms
@@ -435,53 +436,8 @@ border: none;
       flex: 25%;
       max-width: 25%;
     }
-    .width-6\/12\@m {
-      grid-column: span 6;
-    }
   }
-  
-  @media only screen and (min-width: 768px) {
-    .column {
-      flex: 50%;
-      max-width: 50%;
-    }
-    .width-3\/12\@m {
-      grid-column: span 3;
-    }
-  }
-  
-  @media only screen and (min-width: 1024px) {
-    .column {
-      flex: 25%;
-      max-width: 25%;
-    }
-    .width-2\/12\@m {
-      grid-column: span 12;
-    }
-  }
-  main div.flexed {
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 2rem;
-    column-width: 2rem;
-  }
-  main .column {
-    padding: 0 2vw;
-  }
-  div.social {
-    background-color: black;
-    display: flex;
-    padding: 1rem 0;
-  }
-  div.social a {
-    flex-basis: 25%;
-    text-align: center;
-    color: white;
-    font-size: 2rem;
-  }
-  div.social a:hover {color: orange;}
-  
-main .small-1 {flex-basis: 8.33%;}
+    main .small-1 {flex-basis: 8.33%;}
 main .small-2 {flex-basis: 16.66%;}
 main .small-3 {
     flex-basis: 25%;
@@ -513,79 +469,118 @@ main .small-11 {
 main .small-12 {
     flex-basis: 100%;
 }
- 
-main .medium-1 {
-  flex-basis: 8.33%;
-}
-main .medium-2 {
-  flex-basis: 16.66%;
-}
-main .medium-3 {
-  flex-basis: 25%;
-}
-main .medium-4 {
-  flex-basis: 33.33%;
-}
-main .medium-5 {
-  flex-basis: 41.66%;
-}
-main .medium-6 {
-  flex-basis: 50%;
-}
-main .medium-7 {
-  flex-basis: 58.33%;
-}
-main .medium-8 {
-  flex-basis: 66.66%;
-}
-main .medium-9 {
-  flex-basis: 75%;
-}
-main .medium-10 {
-  flex-basis: 83.33%;
-}
-main .medium-11 {
-  flex-basis: 91.66%;
-}
-main .medium-12 {
-  flex-basis: 100%;
-}
-main .large-1 {
-    flex-basis: 8.33%;
-}
-main .large-2 {
-    flex-basis: 16.66%;
-}
-main .large-3 {
+  
+  
+  @media only screen and (min-width: 768px) {
+    .column {
+      flex: 50%;
+      max-width: 50%;
+    }
+  }
+    main .medium-1 {
+      flex-basis: 8.33%;
+    }
+    main .medium-2 {
+      flex-basis: 16.66%;
+    }
+    main .medium-3 {
+      flex-basis: 25%;
+    }
+    main .medium-4 {
+      flex-basis: 33.33%;
+    }
+    main .medium-5 {
+      flex-basis: 41.66%;
+    }
+    main .medium-6 {
+      flex-basis: 50%;
+    }
+    main .medium-7 {
+      flex-basis: 58.33%;
+    }
+    main .medium-8 {
+      flex-basis: 66.66%;
+    }
+    main .medium-9 {
+      flex-basis: 75%;
+    }
+    main .medium-10 {
+      flex-basis: 83.33%;
+    }
+    main .medium-11 {
+      flex-basis: 91.66%;
+    }
+    main .medium-12 {
+      flex-basis: 100%;
+    }
+  
+  
+  @media only screen and (min-width: 1024px) {
+    .column {
+      flex: 25%;
+      max-width: 25%;
+      grid-column: 4;
+    }
+    }
+    main .large-1 {
+      flex-basis: 8.33%;
+  }
+  main .large-2 {
+      flex-basis: 16.66%;
+  }
+  main .large-3 {
+      flex-basis: 25%;
+  }
+  main .large-4 {
+      flex-basis: 33.33%;
+  }
+  main .large-5 {
+      flex-basis: 41.66%;
+  }
+  main .large-6 {
+      flex-basis: 50%;
+  }
+  main .large-7 {
+      flex-basis: 58.33%;
+  }
+  main .large-8 {
+      flex-basis: 66.66%;
+  }
+  main .large-9 {
+      flex-basis: 75%;
+  }
+  main .large-10 {
+      flex-basis: 83.33%;
+  }
+  main .large-11 {
+      flex-basis: 91.66%;
+  }
+  main .large-12 {
+      flex-basis: 100%;
+  }
+  .flexed {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 2rem;
+    column-width: 2rem;
+  }
+
+  main .column {
+    padding: 0 2vw;
+  }
+  div.social {
+    background-color: black;
+    display: flex;
+    padding: 1rem 0;
+  }
+  div.social a {
     flex-basis: 25%;
-}
-main .large-4 {
-    flex-basis: 33.33%;
-}
-main .large-5 {
-    flex-basis: 41.66%;
-}
-main .large-6 {
-    flex-basis: 50%;
-}
-main .large-7 {
-    flex-basis: 58.33%;
-}
-main .large-8 {
-    flex-basis: 66.66%;
-}
-main .large-9 {
-    flex-basis: 75%;
-}
-main .large-10 {
-    flex-basis: 83.33%;
-}
-main .large-11 {
-    flex-basis: 91.66%;
-}
-main .large-12 {
-    flex-basis: 100%;
-}
+    text-align: center;
+    color: white;
+    font-size: 2rem;
+  }
+  div.social a:hover {color: orange;}
+  
   /*----------- FOOTER --------------*/
   footer {
     background-color: #ddd;
