--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,7 @@ select,
 textarea {
   font-family: inherit;
   /* 1 */
-  font-size: 16px;
+  font-size: 32px;
   /* 1 */
   line-height: 1.15;
   /* 1 */
@@ -429,8 +429,8 @@ main {
 
 @media only screen and (min-width: 320px) {
   .column {
-    flex: 25%;
-    max-width: 60%;
+    flex: auto;
+    max-width: 100%;
   }
   .flexed {
     max-width: 100%;
@@ -439,9 +439,9 @@ main {
   .callToAction {
     display: flex;
     flex-wrap: wrap;
-    flex-flow: row;
-    padding: .1rem;
-    font-size: 25px;
+    flex-flow: column;
+    padding: 3rem;
+    font-size: 50px;
   }
 }
 
@@ -580,11 +580,11 @@ main .medium-12 {
   .callToAction {
     align-items: center;
     display: flex;
-    column-gap: 1rem;
-    padding: 10rem;
+    column-gap: 10rem;
+    padding: 1rem;
     flex-flow: row;
     font-size: 40px;
-    margin: 10px;
+    margin: 1px;
   }
 }
 
